# Crafteria

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml
Assets/Shaders/: crosshair.vert  cube.frag  cube.vert  flora.frag  flora.vert  selection.frag  selection.vert  water.frag  water.vert
Assets/Textures/: make_atlas.py
assets/: cube.vert
client/: BakedChunk.h  BakedChunkPart.cpp  BakedChunkPart.h  Block.h  BlocksSource.h  Chunk.cpp  Chunk.h  Image.cpp  Image.h  Player.cpp  Player.h  Shader.cpp  Shader.h  World.cpp  World.h  constants.h  main.cpp
client/GL/: glad.c  glad.h
client/Math/: Ray.cpp  Ray.h  Vec3i.cpp  Vec3i.h
client/Render/: ChunksRenderer.cpp  ChunksRenderer.h
client/World/: BakedChunk.cpp  BakedChunk.h  BakedChunkPart.cpp  BakedChunkPart.h  Block.cpp  Block.h  BlocksIds.h  Chunk.cpp  Chunk.h  World.cpp  World.h
client/World/Generator/: AbstractWorldGenerator.h  DefaultWorldGenerator.cpp  DefaultWorldGenerator.h
client/platform/: CMakeLists.txt  linux.cpp
client/utils/: CMakeLists.txt  RuntimeConfig.h  test.cpp  test.hpp
